--- a/DioLive.Spred.WebUI/Views/Account/ExternalLoginFailure.cshtml
+++ b/DioLive.Spred.WebUI/Views/Account/ExternalLoginFailure.cshtml
@@ -1,6 +1,6 @@
 @{
-    ViewData["Title"] = "Login Failure";
+    ViewData["PageTitle"] = "Login Failure";
 }
 
-<h2 class="ui header">@ViewData["Title"]</h2>
+<h2 class="ui header">@ViewData["PageTitle"]</h2>
 <h3 class="ui sub header">Unsuccessful login with service.</h3>
