--- a/DioLive.Spred.WebUI/Views/Account/ForgotPassword.cshtml
+++ b/DioLive.Spred.WebUI/Views/Account/ForgotPassword.cshtml
@@ -1,13 +1,14 @@
 @model ForgotPasswordViewModel
+
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["PageTitle"] = "Forgot your password?";
 }
 
-<h2 class="ui header">@ViewData["Title"]</h2>
+@section scripts {
+    @await Html.PartialAsync("_ValidationScriptsPartial")
+}
+
+<h2 class="ui header">@ViewData["PageTitle"]</h2>
 <p>
     For more information on how to enable reset password please see this <a href="https://go.microsoft.com/fwlink/?LinkID=532713">article</a>.
 </p>
-
-@section Scripts {
-    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
-}
