--- a/DioLive.Spred.WebUI/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/DioLive.Spred.WebUI/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,8 +1,8 @@
 @{
-    ViewData["Title"] = "Forgot Password Confirmation";
+    ViewData["PageTitle"] = "Forgot Password Confirmation";
 }
 
-<h2 class="ui header">@ViewData["Title"]</h2>
+<h2 class="ui header">@ViewData["PageTitle"]</h2>
 <p>
     Please check your email to reset your password.
 </p>
