--- a/DioLive.Spred.WebUI/Views/Account/Info.cshtml
+++ b/DioLive.Spred.WebUI/Views/Account/Info.cshtml
@@ -1,5 +1,6 @@
 @{
-    ViewBag.Title = "Info";
+    ViewData["PageTitle"] = "Info";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+
+<h2>@ViewData["PageTitle"].</h2>
+<h3>@ViewData["Message"]</h3>
