--- a/DioLive.Spred.WebUI/Views/Account/Lockout.cshtml
+++ b/DioLive.Spred.WebUI/Views/Account/Lockout.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewData["Title"] = "Locked out";
+    ViewData["PageTitle"] = "Locked out";
 }
 
 <h1 class="ui header red">Locked out</h1>
