--- a/DioLive.Spred.WebUI/Views/Account/VerifyCode.cshtml
+++ b/DioLive.Spred.WebUI/Views/Account/VerifyCode.cshtml
@@ -1,15 +1,18 @@
 @model VerifyCodeViewModel
+
 @{
-    ViewData["Title"] = "Verify";
+    ViewData["PageTitle"] = "Verify";
 }
 
-<h2 class="ui header">@ViewData["Title"]</h2>
+@section scripts {
+    @await Html.PartialAsync("_ValidationScriptsPartial")
+}
 
+<h2 class="ui header">@ViewData["PageTitle"]</h2>
 <form asp-controller="Account" asp-action="VerifyCode" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="ui small form validate-me" role="form">
     <input asp-for="Provider" type="hidden" />
     <input asp-for="RememberMe" type="hidden" />
     <h4 class="ui header">@ViewData["Status"]</h4>
-
     <div class="field">
         <div class="ui left icon input">
             <i class="code icon"></i>
@@ -18,19 +21,13 @@
     </div>
     <div class="field">
         <div class="ui checkbox">
-            <input asp-for="RememberBrowser" type="checkbox" tabindex="0" class="hidden"/>
+            <input asp-for="RememberBrowser" type="checkbox" tabindex="0" class="hidden" />
             <label>Remember this browser?</label>
         </div>
     </div>
-
 
     <input type="submit" class="ui blue submit button" value="Submit" />
     <br />
     <div asp-validation-summary="All" class="ui error message"></div>
     <br />
-
 </form>
-
-@section Scripts {
-    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
-}
