--- a/DioLive.Spred.WebUI/Views/Manage/ChangePassword.cshtml
+++ b/DioLive.Spred.WebUI/Views/Manage/ChangePassword.cshtml
@@ -1,39 +1,36 @@
 @model ChangePasswordViewModel
+
 @{
-    ViewData["Title"] = "Change Password";
+    ViewData["PageTitle"] = "Change Password";
 }
 
-<h2 class="ui header">@ViewData["Title"]</h2>
+@section scripts {
+    @await Html.PartialAsync("_ValidationScriptsPartial")
+}
 
+<h2 class="ui header">@ViewData["PageTitle"]</h2>
 <form asp-controller="Manage" asp-action="ChangePassword" method="post" class="ui small form validate-me" role="form">
     <h3 class="ui header">Change Password Form</h3>
-
     <div class="six wide field">
         <div class="ui left icon input">
             <i class="lock icon"></i>
-            <input asp-for="OldPassword" placeholder="Old Password"/>
+            <input asp-for="OldPassword" placeholder="Old Password" />
         </div>
     </div>
-
     <div class="six wide field">
         <div class="ui left icon input">
             <i class="lock icon"></i>
-            <input asp-for="NewPassword" placeholder="New Password"/>
+            <input asp-for="NewPassword" placeholder="New Password" />
         </div>
     </div>
-
     <div class="six wide field">
         <div class="ui left icon input">
             <i class="lock icon"></i>
             <input asp-for="ConfirmPassword" placeholder="Confirm New Password" />
         </div>
     </div>
-    <br/>
-    <input type="submit" class="ui large blue submit button" value="Change Password"/>
-    <br/>
+    <br />
+    <input type="submit" class="ui large blue submit button" value="Change Password" />
+    <br />
     <div asp-validation-summary="All" class="ui error message"></div>
 </form>
-
-@section Scripts {
-    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
-}
