--- a/DioLive.Spred.WebUI/Views/Manage/Index.cshtml
+++ b/DioLive.Spred.WebUI/Views/Manage/Index.cshtml
@@ -1,21 +1,20 @@
 @model IndexViewModel
+
 @{
-    ViewData["Title"] = "Manage your account";
+    ViewData["PageTitle"] = "Manage your account";
 }
 
-<h2 class="ui header">@ViewData["Title"]</h2>
-
+<h2 class="ui header">@ViewData["PageTitle"]</h2>
 @if ((string)ViewData["StatusMessage"] != "")
 {
     <p class="ui success message">@ViewData["StatusMessage"]</p>
 }
 
-
-    <h3 class="ui header">Change your account settings</h3>
+<h3 class="ui header">Change your account settings</h3>
 <div class="ui segment">
     <h4 class="ui header">Password</h4>
     <div class="content">
-        
+
         [@if (Model.HasPassword)
         {
             <a asp-controller="Manage" asp-action="ChangePassword">Change</a>
@@ -25,24 +24,19 @@
             <a asp-controller="Manage" asp-action="SetPassword">Create</a>
         }]
     </div>
-   
 </div>
-
 <div class="ui segment">
     <h4 class="ui header">
         External Logins
     </h4>
-
     <div class="content">
         @Model.Logins.Count [ <a asp-controller="Manage" asp-action="ManageLogins">Manage</a> ]
     </div>
 </div>
-
 <div class="ui segment">
     <h4 class="ui header">
         Phone Number
     </h4>
-
     <div class="content">
         Phone Numbers can used as a second factor of verification in two-factor authentication.
         See <a href="https://go.microsoft.com/fwlink/?LinkID=532713">this article</a>
@@ -63,30 +57,28 @@
         ]
     </div>
 </div>
-
 <div class="ui segment">
     <h4 class="ui header">
         Two-Factor Authentication
     </h4>
-
     <div class="content">
         There are no two-factor authentication providers configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532713">this article</a>
         for setting up this application to support two-factor authentication.
     </div>
     <div class="content">
         @if (Model.TwoFactor)
-    {
-        <form asp-controller="Manage" asp-action="DisableTwoFactorAuthentication" method="post" class="form-horizontal" role="form">
+        {
+            <form asp-controller="Manage" asp-action="DisableTwoFactorAuthentication" method="post" class="form-horizontal" role="form">
                 Enabled &nbsp;
                 <button type="submit" class="ui red submit button">Disable</button>
-        </form>
-    }
-    else
-    {
-        <form asp-controller="Manage" asp-action="EnableTwoFactorAuthentication" method="post" class="form-horizontal" role="form">
+            </form>
+        }
+        else
+        {
+            <form asp-controller="Manage" asp-action="EnableTwoFactorAuthentication" method="post" class="form-horizontal" role="form">
                 Disabled &nbsp;
                 <button type="submit" class="ui primary submit button">Enable</button>
-        </form>
-    }
+            </form>
+        }
     </div>
 </div>
