--- a/DioLive.Spred.WebUI/Views/Manage/SetPassword.cshtml
+++ b/DioLive.Spred.WebUI/Views/Manage/SetPassword.cshtml
@@ -1,19 +1,23 @@
 @model SetPasswordViewModel
+
 @{
-    ViewData["Title"] = "Set Password";
+    ViewData["PageTitle"] = "Set Password";
+}
+
+@section scripts {
+    @await Html.PartialAsync("_ValidationScriptsPartial")
 }
 
 <p class="content">
     You do not have a local username/password for this site. Add a local
     account so you can log in without an external login.
 </p>
-
 <form asp-controller="Manage" asp-action="SetPassword" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="ui small form validate-me" role="form">
     <h4 class="ui header">Set your password</h4>
     <div class="six wide field">
         <div class="ui left icon input">
             <i class="lock icon"></i>
-            <input asp-for="NewPassword" placeholder="Password"/>
+            <input asp-for="NewPassword" placeholder="Password" />
         </div>
     </div>
     <div class="six wide field">
@@ -22,12 +26,8 @@
             <input asp-for="ConfirmPassword" placeholder="Confirm Password" />
         </div>
     </div>
-    <br/>
+    <br />
     <input type="submit" class="ui blue submit button" value="Set Password" />
-    <br/>
+    <br />
     <div asp-validation-summary="All" class="ui error message"></div>
 </form>
-
-@section Scripts {
-    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
-}
