--- a/DioLive.Spred.WebUI/Views/Account/ConfirmEmail.cshtml
+++ b/DioLive.Spred.WebUI/Views/Account/ConfirmEmail.cshtml
@@ -1,8 +1,8 @@
 @{
-    ViewData["Title"] = "Confirm Email";
+    ViewData["PageTitle"] = "Confirm Email";
 }
 
-<h2 class="ui header">@ViewData["Title"]</h2>
+<h2 class="ui header">@ViewData["PageTitle"]</h2>
 <div>
     <p>
         Thank you for confirming your email. Please <a asp-controller="Account" asp-action="Login">Click here to Log in</a>.
