--- a/DioLive.Spred.WebUI/Views/Account/Register.cshtml
+++ b/DioLive.Spred.WebUI/Views/Account/Register.cshtml
@@ -1,11 +1,15 @@
 @model RegisterViewModel
+
 @{
-    ViewData["Title"] = "Register";
+    ViewData["PageTitle"] = "Register";
+}
+
+@section scripts {
+    @await Html.PartialAsync("_ValidationScriptsPartial")
 }
 
 <div class="ui raised very padded text container">
     <h3 class="ui header centered">Register</h3>
-
     <form asp-controller="Account" asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="ui large form validate-me" role="form">
         <div class="ui stacked segment">
             <div class="field">
@@ -31,8 +35,3 @@
         </div>
     </form>
 </div>
-
-
-@section Scripts {
-    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
-}
