--- a/DioLive.Spred.WebUI/Views/Home/Contact.cshtml
+++ b/DioLive.Spred.WebUI/Views/Home/Contact.cshtml
@@ -1,12 +1,13 @@
 @{
-    ViewData["Title"] = "Contact";
+    ViewData["PageTitle"] = "Contact";
 }
+
 <div class="ui container">
-    <h2>@ViewData["Title"]</h2>
+    <h2>@ViewData["PageTitle"]</h2>
     <h3>@ViewData["Message"]</h3>
     <address>
-        One Microsoft Way<br/>
-        Redmond, WA 98052-6399<br/>
+        One Microsoft Way<br />
+        Redmond, WA 98052-6399<br />
         <abbr title="Phone">P:</abbr>
         425.555.0100
     </address>
