--- a/DioLive.Spred.WebUI/Views/Home/Index.cshtml
+++ b/DioLive.Spred.WebUI/Views/Home/Index.cshtml
@@ -1,12 +1,9 @@
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["PageTitle"] = "Home Page";
 }
 
-
 <div class="ui blue inverted vertical masthead center aligned segment">
-
     <div class="ui text container">
-
         <h1 class="ui inverted header">
             MVC + Semantic UI
         </h1>
@@ -15,7 +12,6 @@
             Get Started <i class="right arrow icon"></i>
         </a>
     </div>
-
 </div>
 <div class="ui grid">
     <div class="eight wide column">
@@ -46,10 +42,8 @@
             </ol>
         </div>
     </div>
-
 </div>
 <div class="ui grid">
-
     <div class="eight wide column">
         <div class="ui segment">
             <h1 class="ui black ribbon label">Run & Deploy</h1>
