--- a/DioLive.Spred.WebUI/Views/Manage/AddPhoneNumber.cshtml
+++ b/DioLive.Spred.WebUI/Views/Manage/AddPhoneNumber.cshtml
@@ -1,12 +1,16 @@
 @model AddPhoneNumberViewModel
+
 @{
-    ViewData["Title"] = "Add Phone Number";
+    ViewData["PageTitle"] = "Add Phone Number";
 }
 
-<h2 class="ui header">@ViewData["Title"]</h2>
+@section scripts {
+    @await Html.PartialAsync("_ValidationScriptsPartial")
+}
+
+<h2 class="ui header">@ViewData["PageTitle"]</h2>
 <form asp-controller="Manage" asp-action="AddPhoneNumber" method="post" class="ui small form validate-me" role="form">
     <h3 class="ui header">Add a phone number</h3>
-
     <div class="field">
         <div class="ui left icon input">
             <i class="phone icon"></i>
@@ -15,11 +19,5 @@
         </div>
     </div>
     <input type="submit" class="ui blue submit button" value="Send Verification Code" />
-
     <div asp-validation-summary="All" class="ui error message"></div>
-
 </form>
-
-@section Scripts {
-    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
-}
