--- a/DioLive.Spred.WebUI/Views/Manage/ManageLogins.cshtml
+++ b/DioLive.Spred.WebUI/Views/Manage/ManageLogins.cshtml
@@ -1,11 +1,12 @@
-@model ManageLoginsViewModel
 @using Microsoft.AspNetCore.Http.Authentication
+
+@model ManageLoginsViewModel
+
 @{
-    ViewData["Title"] = "Manage your external logins";
+    ViewData["PageTitle"] = "Manage your external logins";
 }
 
-<h2 class="ui header">@ViewData["Title"]</h2>
-
+<h2 class="ui header">@ViewData["PageTitle"]</h2>
 @if ((string)ViewData["StatusMessage"] != "")
 {
     <p class="ui success message">@ViewData["StatusMessage"]</p>
@@ -15,27 +16,26 @@
 {
     <h3 class="ui header">Registered Logins</h3>
 
-
-            foreach (var account in Model.CurrentLogins)
+    foreach (var account in Model.CurrentLogins)
+    {
+        <h4 class="ui header">@account.LoginProvider</h4>
+        <div class="content">
+            @if ((bool)ViewData["ShowRemoveButton"])
             {
-
-                <h4 class="ui header">@account.LoginProvider</h4>
-                <div class="content">@if ((bool)ViewData["ShowRemoveButton"])
-                {
-                    <form asp-controller="Manage" asp-action="RemoveLogin" method="post" class="form-horizontal" role="form">
-                        <div>
-                            <input asp-for="@account.LoginProvider" type="hidden" />
-                            <input asp-for="@account.ProviderKey" type="hidden" />
-                            <input type="submit" class="ui red submit button" value="Remove" title="Remove this @account.LoginProvider login from your account" />
-                        </div>
-                    </form>
-                }
-                else
-                {
-                    @: &nbsp;
-                        }</div>
-
+                <form asp-controller="Manage" asp-action="RemoveLogin" method="post" class="form-horizontal" role="form">
+                    <div>
+                        <input asp-for="@account.LoginProvider" type="hidden" />
+                        <input asp-for="@account.ProviderKey" type="hidden" />
+                        <input type="submit" class="ui red submit button" value="Remove" title="Remove this @account.LoginProvider login from your account" />
+                    </div>
+                </form>
             }
+            else
+            {
+                @: &nbsp;
+            }
+        </div>
+    }
 }
 @if (Model.OtherLogins.Count > 0)
 {
