--- a/DioLive.Spred.WebUI/Views/Shared/Error.cshtml
+++ b/DioLive.Spred.WebUI/Views/Shared/Error.cshtml
@@ -1,7 +1,6 @@
 @{
-    ViewData["Title"] = "Error";
+    ViewData["PageTitle"] = "Error";
 }
-
 <h1 class="ui header">Error</h1>
 <h2 class="ui header">An error occurred while processing your request.</h2>
 <h3>Development Mode</h3>
