--- a/DioLive.Spred.WebUI/Views/Shared/_LoginPartial.cshtml
+++ b/DioLive.Spred.WebUI/Views/Shared/_LoginPartial.cshtml
@@ -4,24 +4,23 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
-@if (SignInManager.IsSignedIn(User))
-{
-    <div class="right menu">
-        <div class="item"><a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a></div>
+<div class="right menu">
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <div class="item">
+            <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+        </div>
         <form asp-area="" asp-controller="Account" asp-action="LogOff" method="post" id="logoutForm" class="item">
             <button type="submit" class="ui button">Log off</button>
         </form>
-    </div>
-
-}
-else
-{
-    <div class="right menu">
+    }
+    else
+    {
         <div class="item">
-            <a class="ui button" href="/Account/Login">Log in</a>
+            <a asp-area="" asp-controller="Account" asp-action="Login" title="Login" class="ui button">Log in</a>
         </div>
         <div class="item">
-            <a class="ui primary button" href="/Account/Register">Sign Up</a>
+            <a asp-area="" asp-controller="Account" asp-action="Register" title="Signup" class="ui primary button">Sign Up</a>
         </div>
-    </div>
-}
+    }
+</div>
