--- a/DioLive.Spred.WebUI/Views/Account/Register.cshtml
+++ b/DioLive.Spred.WebUI/Views/Account/Register.cshtml
@@ -15,6 +15,12 @@
             <div class="field">
                 <div class="ui left icon input">
                     <i class="user icon"></i>
+                    <input asp-for="Name" placeholder="Name" />
+                </div>
+            </div>
+            <div class="field">
+                <div class="ui left icon input">
+                    <i class="at icon"></i>
                     <input asp-for="Email" placeholder="Email address" />
                 </div>
             </div>
