--- a/DioLive.Spred.WebUI/Views/Account/Login.cshtml
+++ b/DioLive.Spred.WebUI/Views/Account/Login.cshtml
@@ -21,8 +21,8 @@
                 <div class="field">
                     <div class="ui left icon input">
                         <i class="user icon"></i>
-                        <input asp-for="Email" placeholder="Email address" />
-                        <div asp-validation-for="LoginModel.Email"></div>
+                        <input asp-for="Name" placeholder="Name" />
+                        <div asp-validation-for="LoginModel.Name"></div>
                     </div>
                 </div>
                 <div class="field">
@@ -68,7 +68,6 @@
                         <p>
                             @foreach (var provider in loginProviders)
                             {
-
                                 <button type="submit" class="ui @provider.AuthenticationScheme.ToLower() button" name="provider" value="@provider.AuthenticationScheme" title="Log in using your @provider.DisplayName account"><i class="@provider.AuthenticationScheme.ToLower() icon"></i> @provider.AuthenticationScheme</button>
                             }
                         </p>
