--- a/DioLive.Spred.WebUI/Views/Shared/_Layout.cshtml
+++ b/DioLive.Spred.WebUI/Views/Shared/_Layout.cshtml
@@ -110,5 +110,6 @@
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
     @RenderSection("scripts", required: false)
+    @RenderSection("uploadPhoto",required:false)
 </body>
 </html>
